load config from xml completed fix

--- a/data/default.conf
+++ b/data/default.conf
@@ -48,5 +48,5 @@
       <minCircularity>0.2</minCircularity>
    </blobDetector>
    <!-- MISC -->
-   <debugPrints>False</debugPrints>
+   <debugPrints>True</debugPrints>
 </gammaRayAnalysis>
