--- a/data/default.conf
+++ b/data/default.conf
@@ -15,7 +15,7 @@
    <localTransformation>
       <!-- Stretching Parameters -->
       <type>Stretching</type>
-      <kernelSize>20</kernelSize>
+      <kernelSize>14</kernelSize>
       <stepSize>10</stepSize>
       <minBins>5</minBins>
    </localTransformation>
@@ -48,5 +48,5 @@
       <minCircularity>0.2</minCircularity>
    </blobDetector>
    <!-- MISC -->
-   <debugImages>False</debugImages>
+   <debugImages>True</debugImages>
 </gammaRayAnalysis>
